# uipath_hackathon26_756

./: .gitignore  Claude.md  DASHBOARD_DATA_COVERAGE_ANALYSIS.md  JSON_TO_DATA_FABRIC_MAPPING.md  LICENSE  PROCESS_SPECIFICATION.md  README.md
call_analytics_app/: .env.example  .gitignore  README.md  agent.mermaid  bindings.json  entry-points.json  main.py  project.uiproj  pyproject.toml  requirements-local-ml.txt  run-ngrok.ps1  run-server.ps1  uipath.json
call_analytics_app/src/call_analytics/: __init__.py  cli.py  graph.py  llm.py  models_runtime.py  outputs.py  pipeline.py  rubrics.py  schemas.py  settings.py
call_analytics_app/src/call_analytics/analysis/: __init__.py  compliance.py  enrichment.py  followup.py  followup_actions.py  heatmap.py  identity.py  roles.py  rollup.py  sentiment.py
call_analytics_app/src/call_analytics/api/: main.py  sessions.py
call_analytics_app/src/call_analytics/audio/: __init__.py  align.py  diarize.py  emotion.py  loader.py  transcribe.py
call_analytics_app/tests/: test_align.py  test_compliance.py  test_enrichment.py  test_identity.py  test_schemas.py  test_smoke.py
call_analytics_cloud_agent/: .env.example  .gitignore  agent.mermaid  entry-points.json  main.py  pyproject.toml
uipath_hackathon/: package-lock.json  package.json
uipath_hackathon/AcmeCallCenterAnalytics/: README.md  solution.json
uipath_hackathon/Docs/: BPMN_MODIFICATION_GUIDE.md  PROJECT_SUMMARY.md  acme-call-center-analytics-solution-sdd.md  acme-call-center-analytics-tasks.md  acme-call-center-analytics-tasks.xlsx  call-center-ai-agent-sdd.md  (+6 more)
(+136 files in other folders)
