[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/call_analytics"]

[project]
name = "call-analytics"
version = "0.4.0"
description = "Call-center audio analytics — UiPath cloud orchestrator (ML runs on local server via API)"
authors = [{ name = "Vineeth Shenoy" }]
requires-python = ">=3.11"
dependencies = [
    "uipath",
    "uipath-langchain",
    "langgraph",
    "langchain-core",
    "pydantic>=2",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "uipath-dev",
]

[tool.pytest.ini_options]
markers = ["gpu: end-to-end tests that require a CUDA GPU + models"]
